updated input attributes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <h1>Black Sheep Coffee Bar Recipes</h1>
         <div class="search-bar">
-            <input class="search-box" type="text" placeholder="Search for a recipe...">
+            <input class="search-box" type="text" id="myInput" placeholder="Search for drinks...">
         </div>
     </header>
 
@@ -839,6 +839,7 @@
         </div>
 
     </div>
+    <script src="main.js"></script>
 </body>
 
 </html>
